프론트엔드 펀더멘털 시작

--- a/data/study/20250724.md
+++ b/data/study/20250724.md
@@ -37,3 +37,7 @@ CRDT도 틈틈이 봐야 하는데.
 ## 2025.07.28 - 2025.07.30
 
 미진한 부분이 있으면 이때 더 채우기
+
+---
+
+이후에는 Nest.js같은 서버 프레임워크도 복습 좀 해야 하는데, 일단은 이 계획에 집중하자.
