--- a/data/study/20250724.md
+++ b/data/study/20250724.md
@@ -1,7 +1,11 @@
 ---
 id: 20250724
-title: 20250724 계획
+title: 20250724에 세웠던 계획
 description: 약 1-2주간 공부할 계획을 작성
+---
+
+이건 2025년 7월 24일에 학습을 위해 적었던 계획이다.
+
 ---
 
 회사에서는 zustand로 전역 상태 관리를 하고 있다. 그리고 playwright로 e2e 테스트 코드 자동화를 하면 어떨까 하는 고려를 하고 있다. 따라서 zustand를 복습하고 playwright를 세팅하고 테스트해보는 시간을 갖고자 한다.
