폴더 구조를 README에 맞게 변경

--- a/data/daily/11ty.md
+++ b/data/daily/11ty.md
@@ -1,6 +1,6 @@
 ---
 id: 11ty-basics
-title: 11ty 기초
+title: 2025-07-28 11ty 기초
 description: 11ty 기초 정리
 slug: 11ty-basics
 ---
@@ -31,7 +31,6 @@ title: 시험 제목
 
 {{ title }}
 ```
-
 
 TODO
 
