--- a/data/daily/20250407.md
+++ b/data/daily/20250407.md
@@ -1,6 +1,6 @@
 ---
-id: 20250407 java
-title: 2025년 4월 7일 java 질문
+id: 2025-04-07
+title: 2025-04-07 김영한 Java 강의에서 생긴 질문
 description: 2024년 4월 7일 java 학습한 내용 정리
 ---
 
@@ -24,7 +24,7 @@ System.out.println(hundred2==hundred);
 System.out.println(hundred.equals(hundred2));
 ```
 
-여기서 둘 다 false가 나온다. 100과, 10에 10을 곱해서 나온 BigDecimal이 다른 것이다. 이는 `==`, `equals` 모두 객체 참조를 비교하기 때문이다. 그리고 또 하나 문제가 있는데 BigDecimal의 equals는 값뿐 아니라 scale(정밀도)까지 비교한다. 따라서 돈 계산 등에서 10000원과 (1000.0 * 10)이 다를 수도 있다.
+여기서 둘 다 false가 나온다. 100과, 10에 10을 곱해서 나온 BigDecimal이 다른 것이다. 이는 `==`, `equals` 모두 객체 참조를 비교하기 때문이다. 그리고 또 하나 문제가 있는데 BigDecimal의 equals는 값뿐 아니라 scale(정밀도)까지 비교한다. 따라서 돈 계산 등에서 10000원과 (1000.0 \* 10)이 다를 수도 있다.
 
 따라서 `compareTo`를 사용하거나 equals를 오버라이딩해야 한다. 다른 경우로는 `.create(...)`를 통해 찾은 객체와 `findById(id)` 로 찾은 객체가 다를 경우 등이 있다.
 
@@ -61,4 +61,3 @@ for (Car car : cars) {
     car.run();
 }
 ```
-
