--- a/data/daily/20250722.md
+++ b/data/daily/20250722.md
@@ -1,7 +1,7 @@
 ---
 id: 20250722
-title: 2025년 7월 22일 메모
-description: 2025년 7월 22일의 학습 메모
+title: 2025-07-22 네트워크 타임아웃에 대하여
+description: 2025년 7월 22일 네트워크 타임아웃에 대해 찾아보고 한 메모
 ---
 
 최근에 어떤 외국 사이트에 접속하다가 타임아웃이 발생했다. 분명 운영 중인 사이트일 테고 외국에 있어서 느린 게 당연한데 왜 타임아웃을 발생시킬까 생각했다. 그냥 응답이 올 때까지 기다리면 되지 않나?
