--- a/data/daily/20251212.md
+++ b/data/daily/20251212.md
@@ -34,3 +34,11 @@ web.dev의 CSS subgrid 문서(https://web.dev/articles/css-subgrid?hl=ko)를 보
 
 호퍼의 구술 인터뷰
 https://archive.computerhistory.org/resources/text/Oral_History/Hopper_Grace/102702026.05.01.pdf
+
+# Content-Signal 헤더
+
+사용자에게 선택권을 주는 Cloudflare의 새로운 콘텐츠 신호 정책
+
+https://blog.cloudflare.com/ko-kr/content-signals-policy/
+
+AI 학습에 무분별한 크롤링을 통해 얻은 데이터가 쓰이는 게 문제가 되고 있다. 따라서 robots.txt에 해당 콘텐츠가 어디에 쓰일지를 사용자가 지정할 수 있는 콘텐츠 신호(Content Signal) 정책을 추가할 수 있게 되었다고 한다. Cloudflare에서 만듬.
